<?xml version="1.0" encoding="utf-8"?><!--
  ~ SMS Import / Export: a simple Android app for importing and exporting SMS messages from and to JSON files.
  ~ Copyright (c) 2021-2022 Thomas More
  ~
  ~ This file is part of SMS Import / Export.
  ~
  ~ SMS Import / Export is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SMS Import / Export is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SMS Import / Export.  If not, see <https://www.gnu.org/licenses/>.
  -->
<resources>
    <string name="app_name">SMS Import / Export</string>
    <string name="export_messages_button_label">Export Messages</string>
    <string name="import_messages_button_label">Import Messages</string>
    <string name="export_call_log_button_label">Export Call Log</string>
    <string name="import_call_log_button_label">Import Call Log</string>
    <string name="ready">Ready</string>
    <!--<string name="begin_exporting_messages">Exporting messages …</string>
    <string name="begin_exporting_sms">Exporting SMS messages …</string>
    <string name="begin_exporting_mms">Exporting MMS messages …</string>
    <string name="begin_importing_messages">Importing messages …</string>
    <string name="begin_importing_sms">Importing SMS messages …</string>
    <string name="begin_importing_mms">Exporting MMS messages …</string>
    <string name="begin_exporting_call_log">Exporting call log …</string>
    <string name="begin_importing_call_log">Importing call log</string>-->
    <string name="call_log_export_progress">%1$d of %2$d call(s) exported</string>
    <string name="call_log_import_progress">%1$d call(s) imported</string>
    <string name="sms_export_progress">%1$d of %2$d SMS(s) exported</string>
    <string name="mms_export_progress">%1$d of %2$d MMS(s) exported</string>
    <string name="message_import_progress">%1$d SMS(s) and %2$d MMS(s) imported</string>
    <string name="contacts_export_progress">%1$d of %2$d contact(s) exported</string>
    <string name="contacts_import_progress">%1$d contact(s) imported</string>
    <string name="export_messages_results">%1$d SMS(s) and %2$d MMS(s) exported\nElapsed time: %3$s</string>
    <string name="import_messages_results">%1$d SMS(s) and %2$d MMS(s) imported\nElapsed time: %3$s</string>
    <string name="export_call_log_results">%1$d call(s) exported\nElapsed time: %2$s</string>
    <string name="import_call_log_results">%1$d call(s) imported\nElapsed time: %2$s</string>
    <string name="export_contacts_results">%1$d contact(s) exported\nElapsed time: %2$s.</string>
    <string name="import_contacts_results">%1$d contact(s) imported\nElapsed time: %2$s.</string>
    <string name="sms_permissions_required">Exporting messages requires permission to read SMSs and contacts.</string>
    <string name="default_sms_app_requirement">This app must be the default SMS app to import or wipe messages.</string>
    <string name="call_logs_permissions_required">Exporting call logs requires permission to read Call Logs and Contacts.</string>
    <string name="call_logs_read_write_permissions_required">Importing call logs requires permission to read and write call logs.</string>
    <string name="contacts_read_permission_required">Exporting contacts requires permission to read Contacts.</string>
    <string name="contacts_write_permissions_required">Importing contacts requires permission to write Contacts.</string>
    <string name="not_jsonarray_message">The file does not seem to contain a valid JSONArray.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="include_binary_data">Include binary MMS data</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">Notification Channel</string>
    <string name="scheduled_export_executed">Scheduled export executed</string>
    <string name="scheduled_export_success">%1$d SMS(s), %2$d MMS(s), %3$d calls, and %4$d contacts exported.</string>
    <string name="scheduled_export_failure">Export unsuccessful — see logcat for more details.</string>
    <string name="wipe_messages">Wipe Messages</string>
    <string name="dialog_confirm_wipe">Warning: Wipe all messages from this device permanently, without being able to undo it\?</string>
    <string name="wipe">Wipe</string>
    <string name="cancel">Cancel</string>
    <string name="wipe_cancelled">Wipe cancelled</string>
    <string name="messages_wiped">Messages wiped</string>
    <string name="wiping_sms_messages">Wiping SMS messages …</string>
    <string name="wiping_mms_messages">Wiping MMS messages …</string>
    <string name="app_about_text">SMS Import / Export
\n
\nby Thomas More and other contributors
\n
\nVersion %1$s
\n
\nCopyright © 2021–2022
\n
\nReleased under the GNU GPLv3</string>
    <string name="homepage">Homepage:</string>
    <string name="app_homepage">https://github.com/tmo1/sms-ie</string>
    <string name="documentation">Documentation:</string>
    <string name="app_documentation">https://github.com/tmo1/sms-ie#readme</string>
    <string name="issue_tracker">Issue tracker:</string>
    <string name="app_issue_tracker">https://github.com/tmo1/sms-ie/issues</string>
    <string name="about">About</string>
    <string name="export_contacts">Export Contacts</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="copying_mms_binary_data">Copying MMS binary data ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_welcome">Welcome</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_wipe">Wipe</string>
    <string name="wipe_call_log">Wipe call log (todo)</string>
    <string name="wipe_contacts">Wipe contacts (todo)</string>
</resources>