<?xml version="1.0" encoding="utf-8"?><!--
  ~ SMS Import / Export: a simple Android app for importing and exporting SMS messages from and to JSON files.
  ~ Copyright (c) 2021-2023 Thomas More
  ~
  ~ This file is part of SMS Import / Export.
  ~
  ~ SMS Import / Export is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SMS Import / Export is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SMS Import / Export.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/WelcomeFragment">

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.github.tmo1.sms_ie.WelcomeFragment"
        android:label="@string/menu_welcome"
        tools:layout="@layout/fragment_welcome">
    </fragment>
    <fragment
        android:id="@+id/ImportFragment"
        android:name="com.github.tmo1.sms_ie.ImportFragment"
        android:label="@string/menu_import"
        tools:layout="@layout/fragment_import">
    </fragment>
    <fragment
        android:id="@+id/ExportFragment"
        android:name="com.github.tmo1.sms_ie.ExportFragment"
        android:label="@string/menu_export"
        tools:layout="@layout/fragment_export">
    </fragment>
    <fragment
        android:id="@+id/WipeFragment"
        android:name="com.github.tmo1.sms_ie.WipeFragment"
        android:label="@string/menu_wipe"
        tools:layout="@layout/fragment_wipe">
    </fragment>

</navigation>