<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SMS Import / Export: a simple Android app for importing and exporting SMS messages from and to JSON files.
  ~ Copyright (c) 2021-2023 Thomas More
  ~
  ~ This file is part of SMS Import / Export.
  ~
  ~ SMS Import / Export is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SMS Import / Export is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SMS Import / Export.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WipeFragment" >

    <Button
        android:id="@+id/wipe_all_messages_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/wipe_messages" />

    <Button
        android:id="@+id/wipe_call_log_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/wipe_call_log" />

    <Button
        android:id="@+id/wipe_contacts_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/wipe_contacts" />
</LinearLayout>